popup overflow fix and minor changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,7 +117,14 @@ body {
   margin: auto;
   background: rgb(255, 255, 255);
   width: auto;
-  padding: 8px;
+  max-width: 720px;
+  padding: 1rem;
+}
+.popup-content img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
 }
 .popup-arrow {
   color: rgb(255, 255, 255);
@@ -218,20 +225,6 @@ body {
   -o-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
   animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
-
-.locate-us:hover {
-  background-color: #ffffff;
-  color: #000000;
-}
-.locate-us img {
-  -webkit-filter: brightness(1000);
-  filter: brightness(1000);
-}
-.locate-us:hover img {
-  -webkit-filter: brightness(1);
-  filter: brightness(1);
-}
-
 
 @media (max-width: 1200px) {
   .popup-content {
